# advanced-cpp

./: README.md
.github/workflows/: dockerbuild.yaml
compilertest/: CMakeLists.txt  README.md  main.cpp
docker/: Dockerfile
examples/coroutines/: ex1.cpp  ex2.cpp
examples/modules/ex1/: CMakeLists.txt  main.cpp  usesadd.cpp  usessub.cpp
examples/modules/ex1/math/: add.cppm  math.cppm  sub.cppm
examples/ranges/: ex1.cpp
exercises/: CMakeLists.txt  README.md
exercises/coroutines/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  main.cpp
exercises/modules/ex1/: CMakeLists.txt  main.cpp  mathLib.cpp  mathLib.h
exercises/modules/ex2/: CMakeLists.txt  main.cpp  store.ixx  storeData.ixx
exercises/modules/ex3/: CMakeLists.txt  legacyLib.h  legacyLibWrapper.ixx  main.cpp
exercises/ranges/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  main.cpp
exercises/strongtypes/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  main.cpp
slides/: 1_intro.md  2_ranges.md  3_coroutines.md  4_strong_types.md  5_modules.md
slides/style/sioux/: style.css
